--- a/view/petdetail.ejs
+++ b/view/petdetail.ejs
@@ -15,6 +15,7 @@
         <li><a href="/trainers">Trainers</a></li>
         <li><a href="/myinfo">My Info</a></li>
         <li><a href="/dogencyclopedia">Dog Encyclopedia</a></li>
+        <li><a href="/chat">Chat</a></li>
       </ul>
     </nav>
   </header>
