--- a/view/home.ejs
+++ b/view/home.ejs
@@ -61,6 +61,7 @@
                 <li><a href="/myinfo">My Info</a></li>
                 <li><a href="/dogencyclopedia">Dog Encyclopedia</a></li>
                 <li><a href="/chat">Chat</a></li> <!-- 채팅 기능으로 이동하는 버튼 추가 -->
+                <li><a href="/users">Users</a></li>
                 <% if (!login_id) { %>
                     <li><a href="/login">Login</a></li>
                 <% } else { %>
