--- a/view/createuser.ejs
+++ b/view/createuser.ejs
@@ -159,5 +159,7 @@
       localStorage.clear();
     });
   </script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
