--- a/view/dogencyclopedia.ejs
+++ b/view/dogencyclopedia.ejs
@@ -79,6 +79,7 @@
 
     <p>This is the Dog Encyclopedia page.</p>
     <!-- Dog Encyclopedia 내용 -->
-
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
