--- a/view/myinfo.ejs
+++ b/view/myinfo.ejs
@@ -111,5 +111,7 @@
   <form action="/deleteuser">
     <button type="submit" class="btn">Delete User</button>
   </form>
+  <script src="/socket.io/socket.io.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
