--- a/view/addpet.ejs
+++ b/view/addpet.ejs
@@ -21,5 +21,7 @@
       <button type="submit" class="btn">Add Pet</button>
     </form>
   </div>
+  <script src="/socket.io/socket.io.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
