--- a/view/chat.ejs
+++ b/view/chat.ejs
@@ -35,6 +35,8 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/chat.js"></script>
+    <script src="/app.js"></script>
+
 </body>
 </html>
 
