--- a/view/home.ejs
+++ b/view/home.ejs
@@ -60,7 +60,7 @@
                 <li><a href="/trainers">Trainers</a></li>
                 <li><a href="/myinfo">My Info</a></li>
                 <li><a href="/dogencyclopedia">Dog Encyclopedia</a></li>
-                <li><a href="/chat">Chat</a></li> <!-- 채팅 기능으로 이동하는 버튼 추가 -->
+                <li><a href="/chat">Chat</a></li>
                 <li><a href="/users">Users</a></li>
                 <% if (!login_id) { %>
                     <li><a href="/login">Login</a></li>
@@ -74,6 +74,7 @@
     <h1>Welcome to Our Website</h1>
 
     <p>This is the home page content.</p>
-
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
