--- a/view/login.ejs
+++ b/view/login.ejs
@@ -36,6 +36,8 @@
     </tr>
     </table>
 </form>
+<script src="/socket.io/socket.io.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
 
