--- a/view/mypets.ejs
+++ b/view/mypets.ejs
@@ -40,5 +40,7 @@
   
   <button onclick="location.href='/myinfo'" class="btn">Back to My Info</button>
   <button onclick="location.href='/addpet'" class="btn">add pet</button>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
