--- a/view/noticeboard.ejs
+++ b/view/noticeboard.ejs
@@ -54,5 +54,7 @@
             </ul>
         </div>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
