--- a/view/petdetail.ejs
+++ b/view/petdetail.ejs
@@ -52,5 +52,7 @@
   </form>
 
   <button onclick="location.href='/mypets'" class="btn">Back to My Pets</button>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
