--- a/view/trainer.ejs
+++ b/view/trainer.ejs
@@ -38,6 +38,7 @@
             <% }); %>
         </table>
     </div>
-
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
