--- a/view/users.ejs
+++ b/view/users.ejs
@@ -32,7 +32,7 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/chat.js"></script>
   <script src="/users.js"></script>
+    <script src="/app.js"></script>
 </body>
 </html>
