--- a/view/chat.ejs
+++ b/view/chat.ejs
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat</title>
+    <title>Chat Room</title>
     <link rel="stylesheet" href="/styles.css?after">
 </head>
 <body>
@@ -18,7 +18,7 @@
                 <li><a href="/trainers">Trainers</a></li>
                 <li><a href="/myinfo">My Info</a></li>
                 <li><a href="/dogencyclopedia">Dog Encyclopedia</a></li>
-                <li><a href="/chat">Chat</a></li>
+                <li><a href="/chatlist">Chat</a></li>
                 <% if (!login_id) { %>
                     <li><a href="/login">Login</a></li>
                 <% } else { %>
