--- a/view/home.ejs
+++ b/view/home.ejs
@@ -60,7 +60,7 @@
                 <li><a href="/trainers">Trainers</a></li>
                 <li><a href="/myinfo">My Info</a></li>
                 <li><a href="/dogencyclopedia">Dog Encyclopedia</a></li>
-                <li><a href="/chat">Chat</a></li>
+                <li><a href="/chatlist">Chat</a></li>
                 <li><a href="/users">Users</a></li>
                 <% if (!login_id) { %>
                     <li><a href="/login">Login</a></li>
