--- a/view/myinfo.ejs
+++ b/view/myinfo.ejs
@@ -24,6 +24,12 @@
       <input type="hidden" name="user_id" value="<%= myInfos[0].user_id %>">
       <table>
         <tr>
+          <td>Profile Image:</td>
+          <td>
+            <img src="<%= myInfos[0].profile_image_url %>" alt="Profile Image" style="max-width: 150px; max-height: 150px;">
+          </td>
+        </tr>
+        <tr>
           <td>Login ID:</td>
           <td><input type="text" name="login_id" value="<%= myInfos[0].login_id %>" readonly></td>
         </tr>
@@ -36,6 +42,10 @@
           <td><input type="text" name="user_intro" value="<%= myInfos[0].user_intro %>"></td>
         </tr>
         <tr>
+          <td>User Email:</td>
+          <td><input type="text" name="email" value="<%= myInfos[0].email %>" readonly></td>
+        </tr>
+        <tr>
           <td colspan="2"><button type="submit" class="btn">Update User</button></td>
         </tr>
       </table>
@@ -46,8 +56,10 @@
     
   </form>
   <form action="/deleteuser">
-    <button  type="submit" class="btn">delete user</button>
-  
+    <button  type="submit" class="btn">delete user</button>  
+  </form>
+<form>
+  <button onclick="location.href = 'upload'" type="button" class="btn">upload</button>
 </form>
     
 </body>
