--- a/view/chat.ejs
+++ b/view/chat.ejs
@@ -19,6 +19,7 @@
                 <li><a href="/myinfo">My Info</a></li>
                 <li><a href="/dogencyclopedia">Dog Encyclopedia</a></li>
                 <li><a href="/chatlist">Chat</a></li>
+                <li><a href="/users">Users</a></li>
                 <% if (!login_id) { %>
                     <li><a href="/login">Login</a></li>
                 <% } else { %>
