--- a/view/users.ejs
+++ b/view/users.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Active Users</title>
   <link rel="stylesheet" href="/styles.css">
+  
 </head>
 <body>
   <header>
@@ -15,7 +16,7 @@
                 <li><a href="/trainers">Trainers</a></li>
                 <li><a href="/myinfo">My Info</a></li>
                 <li><a href="/dogencyclopedia">Dog Encyclopedia</a></li>
-                <li><a href="/chatlist">Chat</a></li> <!-- 채팅 기능으로 이동하는 버튼 추가 -->
+                <li><a href="/chatlist">Chat</a></li>
                 <li><a href="/users">Users</a></li>
                 <% if (!login_id) { %>
                     <li><a href="/login">Login</a></li>
