--- a/view/users.ejs
+++ b/view/users.ejs
@@ -1,3 +1,4 @@
+<!-- 1.0 안정화 버전 0808 pm 09:42 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -31,7 +32,7 @@
     <h2>Active Users</h2>
     <ul id="userList"></ul>
   </div>
-  <script src="/socket.io/socket.io.js"></script> <!-- socket.io 라이브러리 -->
+  <script src="/socket.io/socket.io.js"></script>
   <script src="/users.js"></script>
     <script src="/app.js"></script>
 </body>
