--- a/view/chat.ejs
+++ b/view/chat.ejs
@@ -1,6 +1,6 @@
 <!-- HW -->
 
-<!-- 1.4 -->
+<!-- 1.0 안정화 버전 0808 pm 09:42 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,9 +32,9 @@
         <div id="messages"></div>
         <input type="text" id="message-input" placeholder="Type your message here...">
         <button id="send-button">Send</button>
-        <button id="clear-button">Clear Chat</button> <!-- <-- 1.4 추가-->
+        <button id="clear-button">Clear Chat</button> 
     </div>
-    <script src="/socket.io/socket.io.js"></script> <!-- socket.io 라이브러리 -->
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/chat.js"></script>
     <script src="/app.js"></script>
 
