--- a/view/noticeboard/form.ejs
+++ b/view/noticeboard/form.ejs
@@ -57,12 +57,25 @@
         <h2>새로운 글</h2>
         <form action="/form" method="POST" class="noticeboard-form">
             <div class="form-group">
+                <label for="category">카테고리:</label>
+                <select name="category" id="category">
+                    <option value="free" selected>자유게시판</option>
+                    <option value="secret">익명게시판</option>
+                    <option value="advice">건강 상담</option>
+                </select>
+            </div>
+            <div class="form-group">
                 <label for="title">제목:</label>
                 <input type="text" id="title" name="title" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="description">내용:</label>
                 <textarea id="description" name="description" class="form-control" rows="5" required></textarea>
+            </div>
+            <div class="form-group">
+                <label for="image">이미지:</label>
+                <input type="file" name="image" id="image" accept=".jpg,.jpeg,.png,.tiff,.tif,.webp,.heif,.heic, image/jpeg, image/png, image/tiff, image/webp, image/heif, image/heic">
+
             </div>
             <button type="submit" class="submit-btn">글 작성</button>
             <button type="button" onclick="location.href='/noticeboard'">글 목록</button>
